[main] fix product card image cropped

--- a/src/components/common/Product/product-card.common.scss
+++ b/src/components/common/Product/product-card.common.scss
@@ -21,12 +21,12 @@
 		overflow: hidden;
 		height: 70%;
 		img {
-			object-fit: cover;
+			object-fit: scale-down;
 			width: 100%;
 			height: 100%;
 			transition: 250ms;
 			&:hover {
-				transform: scale(1.05);
+				transform: scale(1.1);
 				transition: transform ease-out 350ms;
 			}
 		}
